Bug 1750721 - Revert D134797, r=stransky

For some reason `gdk_device_grab()` does not behave like
`gdk_pointer_grab()` on X11 - potentially a GTK bug.
As `gdk_device_grab()` already has been replaced again by
`gdk_seat_grab()`, let's wait until we can switch to that
instead, i.e. once we require GTK >= 3.20.

Differential Revision: https://phabricator.services.mozilla.com/D136438